--- a/index/index.html
+++ b/index/index.html
@@ -8,24 +8,33 @@
     <link rel="shortcut icon" href="imagens/icon/favicon.ico" type="image/x-icon">
 
     <!-- Estilo Pai-->
-    <link rel="stylesheet" href="padrao-esplee.css">
+    <link rel="stylesheet" href="../padrao-esplee.css">
     <!-- Estilo Filho-->
     <link rel="stylesheet" href="index.css">
 
     <title>Home</title>
 </head>
 <body>
-    <header></header>
-
+    <header>        
+        <div id="header-content">
+            <nav>
+                <div id="nav-logo">
+                    <a href="index.html"><img src="imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+                </div>
+                <div id="nav-links">
+                    <a href="#">Na Rota</a>
+                    <a href="#">Projeto</a>
+                    <a href="#">Sobre Nós</a>
+                    <a href="#">Contato</a>
+                </div>
+            </nav>
+            <div>
+                <h1>Explore o poder da sua marca</h1>
+                <p>Todos tem uma história que precisa ser contada</p>
+            </div>
+        </div>
+    </header>
     <main>
-        <h1>Olá, mundo!</h1>
-        <h2>Olá, mundo!</h2>
-        <h3>Olá, mundo!</h3>
-        <h4>Olá, mundo!</h4>
-        <h5>Olá, mundo!</h5>
-        <h6>Olá, mundo!</h6>
-        <p>Olá, mundo! Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Iusto porro illum minus enim assumenda</strong>. Repellat laborum sit ratione inventore libero at illum deserunt ad pariatur. Porro iste doloribus optio debitis!</p>
-        <p>Olá, mundo! Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Iusto porro illum minus enim assumenda</strong>. Repellat laborum sit ratione inventore libero at illum deserunt ad pariatur. Porro iste doloribus optio debitis!</p>
     </main>
 
     <section></section>
