--- a/index/index.html
+++ b/index/index.html
@@ -28,13 +28,19 @@
                     <a href="#">Contato</a>
                 </div>
             </nav>
-            <div>
-                <h1>Explore o poder da sua marca</h1>
+            <div id="header-headings">
+                <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                 <p>Todos tem uma história que precisa ser contada</p>
+            </div>
+            <a href="#"><button>Começar projeto</button></a>
+            <div id="seta">
+                <img src="imagens/icon/white-seta-down.svg" alt="seta-baixo">
             </div>
         </div>
     </header>
     <main>
+        <h2>Não criamos marcas, revelamos rotas</h2>
+        <p>Todos somos indiscutivelmente únicos. Por isso precisamos ter o reconhecimento relevância que merecemos. Por meio de uma rota bem traçada é possível gerar valor e criar fortes comunidades em um mundo onde A autenticidade virou incomum.</p> 
     </main>
 
     <section></section>
