--- a/index/index.html
+++ b/index/index.html
@@ -19,22 +19,24 @@
         <div id="header-content">
             <nav>
                 <div id="nav-logo">
-                    <a href="index.html"><img src="imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+                    <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
                 </div>
                 <div id="nav-links">
                     <a href="#">Na Rota</a>
                     <a href="#">Projeto</a>
                     <a href="#">Sobre Nós</a>
-                    <a href="#">Contato</a>
+                    <a href="../pags/contato/contato.html">Contato</a>
                 </div>
             </nav>
             <div id="header-headings">
                 <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                 <p>Todos tem uma história que precisa ser contada</p>
             </div>
-            <a href="#"><button>Começar projeto</button></a>
+            <a href="../pags/contato/contato.html">
+                <button>Começar projeto</button>
+            </a>
             <div id="seta">
-                <img src="imagens/icon/white-seta-down.svg" alt="seta-baixo">
+                <img src="../imagens/icon/white-seta-down.svg" alt="seta-baixo">
             </div>
         </div>
     </header>
