--- a/pags/contato/contato.html
+++ b/pags/contato/contato.html
@@ -4,21 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../../padrao-esplee.css">
+    <link rel="stylesheet" href="contato.css">
+
     <title>Contato</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div id="nav-logo">
-                <a href="index.html"><img src="../../" alt="nav-logo"></a>
+        <div id="header-content">
+            <nav>
+                <div id="nav-logo">
+                    <a href="../../index/index.html"><img src="../../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+                </div>
+                <div id="nav-links">
+                    <a href="#">Na Rota</a>
+                    <a href="#">Projeto</a>
+                    <a href="#">Sobre Nós</a>
+                    <a href="contato.html">Contato</a>
+                </div>
+            </nav>
+            <div id="contato-header-heading">
+                <div id="nav2">
+                    <a href="../../index/index.html">Home</a>
+                    <img src="../../imagens/icon/white-seta-right.svg" alt="seta-direita">
+                    <a href=".././contato/contato.html">Contato</a>
+                </div>
+                <h1>Você está quase lá</h1>
+                <p>Manda um oi pra agendarmos uma reunião</p>
             </div>
-            <div id="nav-links">
-                <a href="#">Na Rota</a>
-                <a href="#">Projeto</a>
-                <a href="#">Sobre Nós</a>
-                <a href="#">Contato</a>
+            <div id="seta">
+                <img src="../../imagens/icon/white-seta-down.svg" alt="seta-baixo">
             </div>
-        </nav>
+        </div>
     </header>
 </body>
 </html>
