--- a/index/index.html
+++ b/index/index.html
@@ -16,29 +16,31 @@
 </head>
 <body>
     <header>        
-        <div id="header-content">
-            <nav>
-                <div id="nav-logo">
-                    <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+            <div id="header-content">
+                <nav>
+                    <div id="nav-logo">
+                        <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+                    </div>
+                    <div id="nav-links">
+                        <a href="#">Na Rota</a>
+                        <a href="#">Projeto</a>
+                        <a href="#">Sobre Nós</a>
+                        <a href="../pags/contato/contato.html">Contato</a>
+                    </div>
+                </nav>
+                <div id="header-headings">
+                    <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
+                    <p>Todos tem uma história que precisa ser contada</p>
                 </div>
-                <div id="nav-links">
-                    <a href="#">Na Rota</a>
-                    <a href="#">Projeto</a>
-                    <a href="#">Sobre Nós</a>
-                    <a href="../pags/contato/contato.html">Contato</a>
+                <a href="../pags/contato/contato.html">
+                    <button>Começar projeto</button>
+                </a>
+                <div id="seta">
+                    <img src="../imagens/icon/white-seta-down.svg" alt="seta-baixo">
                 </div>
-            </nav>
-            <div id="header-headings">
-                <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
-                <p>Todos tem uma história que precisa ser contada</p>
             </div>
-            <a href="../pags/contato/contato.html">
-                <button>Começar projeto</button>
-            </a>
-            <div id="seta">
-                <img src="../imagens/icon/white-seta-down.svg" alt="seta-baixo">
-            </div>
-        </div>
+
+            <div class="overlay"></div>
     </header>
     <main>
         <h2>Não criamos marcas, revelamos rotas</h2>
