--- a/pags/contato/contato.html
+++ b/pags/contato/contato.html
@@ -37,6 +37,7 @@
                 <img src="../../imagens/icon/white-seta-down.svg" alt="seta-baixo">
             </div>
         </div>
+        <div class="overlay"></div>
     </header>
 </body>
 </html>
