--- a/pags/contato/contato.html
+++ b/pags/contato/contato.html
@@ -14,7 +14,7 @@
     <header>
         <div id="header-content">
             <nav>
-                <div id="nav-logo">
+                <div class="nav-ico" id="nav-ico-logo">
                     <a href="../../index/index.html"><img src="../../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
                 </div>
                 <div id="nav-links">
@@ -23,20 +23,48 @@
                     <a href="#">Sobre Nós</a>
                     <a href="contato.html">Contato</a>
                 </div>
+                <div class="nav-ico" id="nav-menu-ico">
+                    <a href="#"><img src="../../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                </div>
             </nav>
             <div id="contato-header-heading">
                 <div id="nav2">
                     <a href="../../index/index.html">Home</a>
-                    <img src="../../imagens/icon/white-seta-right.svg" alt="seta-direita">
+                    <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
                     <a href=".././contato/contato.html">Contato</a>
                 </div>
                 <h1>Você está quase lá</h1>
                 <p>Manda um oi pra agendarmos uma reunião</p>
             </div>
             <div id="seta">
-                <img src="../../imagens/icon/white-seta-down.svg" alt="seta-baixo">
+                <img src="../../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
             </div>
         </div>
     </header>
+    <main>
+        <div id="contato-content">
+            <h2>Está com algum problema?
+            </h2>
+            <p>Nesse mundo totalmente incerto e complexo se tornou cada vez mais difícil se destacar da maioria. Mas é pra isso que estamos aqui! A Esplee nasceu para ajudar sua empresa no caminho para criar sua relevância nessa era digital através de marcas fortes.</p>
+        </div>
+        <div id="contato-form">
+            <form autocomplete="off">
+                <div class="form-subtypes" id="form-nome">
+                    <label for="n-email">Email</label>
+                    <input type="email" name="n-email">
+                </div>
+
+                <div class="form-subtypes" id="form-email">
+                    <label for="n-nome">Nome</label>
+                    <input type="text" name="n-nome">
+                </div>
+
+                <div class="form-subtypes" id="form-msg">
+                    <label for="n-msg">Como podemos ajudar?</label>
+                    <input type="text" name="n-msg">
+                </div>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
