--- a/index/index.html
+++ b/index/index.html
@@ -18,7 +18,7 @@
     <header>        
             <div id="header-content">
                 <nav>
-                    <div id="nav-logo">
+                    <div class="nav-ico" id="nav-ico-logo">
                         <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
                     </div>
                     <div id="nav-links">
@@ -27,16 +27,19 @@
                         <a href="#">Sobre Nós</a>
                         <a href="../pags/contato/contato.html">Contato</a>
                     </div>
+                    <div class="nav-ico" id="nav-menu-ico">
+                        <a href="#"><img src="../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                    </div>
                 </nav>
                 <div id="header-headings">
                     <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                     <p>Todos tem uma história que precisa ser contada</p>
                 </div>
                 <a href="../pags/contato/contato.html">
-                    <button>Começar projeto</button>
+                    <button id="header-btn">Começar projeto</button>
                 </a>
                 <div id="seta">
-                    <img src="../imagens/icon/white-seta-down.svg" alt="seta-baixo">
+                    <img src="../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
                 </div>
             </div>
     </header>
