--- a/pags/contato/contato.html
+++ b/pags/contato/contato.html
@@ -64,7 +64,7 @@
                     <input id="inpt-msg" required type="text" name="n-msg" placeholder="Como podemos ajudar?">
                 </div>
                 <button type="submit">Enviar mensagem</button>
-                <p id="atencao">*Essas informações serão usadas apenas para comunicação</p>
+                <p id="atencao">*Essas informações serão usadas apenas para agendarmos uma reunião</p>
             </form>
         </div>
     </main>
