--- a/index/index.html
+++ b/index/index.html
@@ -16,40 +16,81 @@
 </head>
 <body>
     <header>        
-            <div id="header-content">
-                <nav>
-                    <div class="nav-ico" id="nav-ico-logo">
-                        <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
-                    </div>
-                    <div id="nav-links">
-                        <a href="#">Na Rota</a>
-                        <a href="#">Projeto</a>
-                        <a href="#">Sobre Nós</a>
-                        <a href="../pags/contato/contato.html">Contato</a>
-                    </div>
-                    <div class="nav-ico" id="nav-menu-ico">
-                        <a href="#"><img src="../imagens/icon/light-menu.svg" alt="menu-ico"></a>
-                    </div>
-                </nav>
-                <div id="header-headings">
-                    <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
-                    <p>Todos tem uma história que precisa ser contada</p>
+        <div id="header-content">
+            <nav>
+                <div class="nav-ico" id="nav-ico-logo">
+                    <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
                 </div>
-                <a href="../pags/contato/contato.html">
-                    <button id="header-btn">Começar projeto</button>
-                </a>
-                <div id="seta">
-                    <img src="../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
+                <div id="nav-links">
+                    <a href="#">Na Rota</a>
+                    <a href="#">Projeto</a>
+                    <a href="#">Sobre Nós</a>
+                    <a href="../pags/contato/contato.html">Contato</a>
+                </div>
+                <div class="nav-ico" id="nav-menu-ico">
+                    <a href="#"><img src="../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                </div>
+            </nav>
+            <div id="header-headings">
+                <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
+                <p>Todos tem uma história que precisa ser contada</p>
+            </div>
+            <a href="../pags/contato/contato.html">
+                <button class="primario">Começar projeto</button>
+            </a>
+            <div id="seta">
+                <img src="../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
+            </div>
+        </div>
+    </header>
+    <section id="pt1">
+        <div class="content">
+            <div class="left">
+                <div class="tag">
+                    <h2>A chance do século</h2>
+                </div>
+                <h3>O mundo está diferente do que um dia já foi</h3>
+                <p>A internet mudou completamente o comportamento das pessoas e como elas interagem com as outras. Com marcas não foi diferente. O que antes era algo esculpido e artificial, hoje se tornou mais real.</p>
+            </div>
+            <div class="right">
+                <div class="item">
+                    <div class="num">78%</div>
+                    <p>Das empresas estão em alguma rede social</p>
+                </div>
+                <div class="item">
+                    <div class="num">49%</div>
+                    <p>Das empresas brasileiras usam a internet para vender produtos.</p>
+                </div>
+                <div class="item">
+                    <div class="num">700K</div>
+                    <p>Empresas brasileiras abertas no primeiro trimestre de 2020.</p>
                 </div>
             </div>
-    </header>
-    <main>
-        <h2>Não criamos marcas, revelamos rotas</h2>
-        <p>Todos somos indiscutivelmente únicos. Por isso precisamos ter o reconhecimento relevância que merecemos. Por meio de uma rota bem traçada é possível gerar valor e criar fortes comunidades em um mundo onde A autenticidade virou incomum.</p> 
-    </main>
-
-    <section></section>
-
+        </div>
+    </section>
+    <section id="pt2">
+        <div class="content">
+            <h2>Se diferenciar, é ter uma marca forte no digital</h2>
+            <div class="cases">
+                <div class="case">
+                    <div class="mais-info">
+                        <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                    </div>
+                </div>
+                <div class="case">
+                    <div class="mais-info">
+                        <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                    </div>
+                </div>
+                <div class="case">
+                    <div class="mais-info">
+                        <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                    </div>  
+                </div>
+            </div>
+            <button>+ Cases</button>
+        </div>
+    </section>
     <footer></footer>
 </body>
 </html>
