--- a/index/index.html
+++ b/index/index.html
@@ -72,23 +72,49 @@
         <div class="content">
             <h2>Se diferenciar, é ter uma marca forte no digital</h2>
             <div class="cases">
-                <div class="case">
-                    <div class="mais-info">
-                        <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                <a href="#">
+                    <div id="case1" class="case">
+                        <div class="mais-info">
+                            <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                        </div>
                     </div>
-                </div>
-                <div class="case">
-                    <div class="mais-info">
-                        <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                </a>
+                <a href="#">
+                    <div id="case2" class="case">
+                        <div class="mais-info">
+                            <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                        </div>
                     </div>
-                </div>
-                <div class="case">
-                    <div class="mais-info">
-                        <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
-                    </div>  
-                </div>
+                </a>
+                <a href="#">
+                    <div id="case3" class="case">
+                        <div class="mais-info">
+                            <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                        </div>
+                    </div>
+                </a>
             </div>
-            <button>+ Cases</button>
+            <button class="outline-light">+ Cases</button>
+        </div>
+    </section>
+    <section id="pt3">
+        <div class="content">
+            <div class="tag">
+                <h2>Como fazemos</h2>
+            </div>
+            <h3>Nosso jeito de fazer as coisas, o Esplee Style!</h3>
+            <div class="passos">
+                <div class="cont">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+                <h4>Entender o problema</h4>
+                <p>De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
+            </div>
+            
         </div>
     </section>
     <footer></footer>
