--- a/index/index.html
+++ b/index/index.html
@@ -102,19 +102,51 @@
             <div class="tag">
                 <h2>Como fazemos</h2>
             </div>
-            <h3>Nosso jeito de fazer as coisas, o Esplee Style!</h3>
+            <h3>Marcas fortes não surgem do nada</h3>
             <div class="passos">
                 <div class="cont">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
+                    <div class="item"><p>01.</p></div>
+                    <div class="item"><p>02.</p></div>
+                    <div class="item"><p>03.</p></div>
+                    <div class="item"><p>04.</p></div>
+                    <div class="item"><p>05.</p></div>
+                    <div class="barra"></div>
+                    <div class="barra full"></div>
                 </div>
                 <h4>Entender o problema</h4>
                 <p>De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
+            </div>  
+        </div>
+    </section>
+    <section id="pt4">
+        <div class="content">
+            <div class="tag">
+                <h2>Quem somos</h2>
             </div>
-            
+            <h3>Esse é o nosso jeito de fazer, o Esplee Style!</h3>
+            <p>Esplee é um estúdio focado em explorar a autenticidade de cada empresa com o objetivo de projetar a identidade visual junto à uma estratégia de branding para principalmente empresas que são focadas no digital.</p>
+            <img src="#" alt="simbolo-verde">
+        </div>
+    </section>
+    <section id="pt5">
+        <div class="content">
+            <h1>Pronto para <strong>começar</strong>?</h1>
+            <p>Estamos aqui para te ajudar nessa jornada</p>
+            <a href="../pags/contato/contato.html"><button class="primario">Começar projeto</button></a>
+        </div>
+    </section>
+    <section id="pt6">
+        <div class="content">
+            <h2>Duvidas frequentes</h2>
+            <div class="accordions">
+
+            </div>
+        </div>
+    </section>
+    <section id="pt7">
+        <div class="content">
+            <h2>Conheça o Na Rota:</h2>
+            <div class="posts"></div>
         </div>
     </section>
     <footer></footer>
