--- a/index/index.html
+++ b/index/index.html
@@ -150,5 +150,7 @@
         </div>
     </section>
     <footer></footer>
+    <script src="../jquery-3.6.0.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
