--- a/index/index.html
+++ b/index/index.html
@@ -105,16 +105,18 @@
             <h3>Marcas fortes não surgem do nada</h3>
             <div class="passos">
                 <div class="cont">
-                    <div class="item"><p>01.</p></div>
-                    <div class="item"><p>02.</p></div>
-                    <div class="item"><p>03.</p></div>
-                    <div class="item"><p>04.</p></div>
-                    <div class="item"><p>05.</p></div>
+                    <div class="itens">
+                        <div class="item"><p>01.</p></div>
+                        <div class="item"><p>02.</p></div>
+                        <div class="item"><p>03.</p></div>
+                        <div class="item"><p>04.</p></div>
+                        <div class="item"><p>05.</p></div>
+                    </div>
                     <div class="barra"></div>
                     <div class="barra full"></div>
                 </div>
-                <h4>Entender o problema</h4>
-                <p>De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
+                <h4 class="header">Entender o problema</h4>
+                <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
             </div>  
         </div>
     </section>
