--- a/index/index.html
+++ b/index/index.html
@@ -44,6 +44,8 @@
         </div>
     </header>
     <section id="pt1">
+        <div class="triang top right"></div>
+        <div class="triang top left"></div>
         <div class="content">
             <div class="left">
                 <div class="tag">
@@ -67,6 +69,8 @@
                 </div>
             </div>
         </div>
+        <div class="triang bottom right"></div>
+        <div class="triang bottom left"></div>
     </section>
     <section id="pt2">
         <div class="content">
@@ -96,6 +100,8 @@
             </div>
             <button class="outline-light">+ Cases</button>
         </div>
+        <div class="triang bottom right"></div>
+        <div class="triang bottom left"></div>
     </section>
     <section id="pt3">
         <div class="content">
@@ -119,6 +125,8 @@
                 <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
             </div>  
         </div>
+        <div class="triang bottom right"></div>
+        <div class="triang bottom left"></div>
     </section>
     <section id="pt4">
         <div class="content">
@@ -129,6 +137,8 @@
             <p>Esplee é um estúdio focado em explorar a autenticidade de cada empresa com o objetivo de projetar a identidade visual junto à uma estratégia de branding para principalmente empresas que são focadas no digital.</p>
             <img src="#" alt="simbolo-verde">
         </div>
+        <div class="triang bottom right"></div>
+        <div class="triang bottom left"></div>
     </section>
     <section id="pt5">
         <div class="content">
