--- a/pags/index/index.html
+++ b/pags/index/index.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="imagens/icon/favicon.ico" type="image/x-icon">
-
     <!-- Estilo Pai-->
-    <link rel="stylesheet" href="../padrao-esplee.css">
+    <link rel="stylesheet" href="../../padrao-esplee/padrao-esplee.css">
     <!-- Estilo Filho-->
     <link rel="stylesheet" href="index.css">
 
@@ -19,27 +17,27 @@
         <div id="header-content">
             <nav>
                 <div class="nav-ico" id="nav-ico-logo">
-                    <a href="index.html"><img src="../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+                    <a href="index.html"><img src="../../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
                 </div>
                 <div id="nav-links">
                     <a href="#">Na Rota</a>
                     <a href="#">Projeto</a>
                     <a href="#">Sobre Nós</a>
-                    <a href="../pags/contato/contato.html">Contato</a>
+                    <a href="../secundarias/contato/contato.html">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
-                    <a href="#"><img src="../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                    <a href="#"><img src="../../imagens/icon/light-menu.svg" alt="menu-ico"></a>
                 </div>
             </nav>
             <div id="header-headings">
                 <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                 <p>Todos tem uma história que precisa ser contada</p>
             </div>
-            <a href="../pags/contato/contato.html">
+            <a href="../secundarias/contato/contato.html">
                 <button class="primario">Começar projeto</button>
             </a>
             <div id="seta">
-                <img src="../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
+                <img src="../../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
             </div>
         </div>
     </header>
@@ -79,21 +77,21 @@
                 <a href="#">
                     <div id="case1" class="case">
                         <div class="mais-info">
-                            <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                            <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
                 <a href="#">
                     <div id="case2" class="case">
                         <div class="mais-info">
-                            <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                            <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
                 <a href="#">
                     <div id="case3" class="case">
                         <div class="mais-info">
-                            <img src="../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                            <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
@@ -150,9 +148,7 @@
     <section id="pt6">
         <div class="content">
             <h2>Duvidas frequentes</h2>
-            <div class="accordions">
 
-            </div>
         </div>
     </section>
     <section id="pt7">
@@ -162,7 +158,10 @@
         </div>
     </section>
     <footer></footer>
-    <script src="../jquery-3.6.0.js"></script>
+    <script src="../../padrao-esplee/jquery-3.6.0.js"></script>
+
+    <script src="../../padrao-esplee/padrao-esplee.js"></script>
+
     <script src="index.js"></script>
 </body>
 </html>
