--- a/testes/accordion.html
+++ b/testes/accordion.html
@@ -6,42 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste</title>
 </head>
-<style>
-    body{
-        background-color: aquamarine;
-    }
-    .accordion{
-        background-color: aliceblue;
-        width: 100%;
-    }
-    .accordion div.header button{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        width: 100%;
-        border: none;
-        padding: 16px 24px;
-
-        background-color: purple;
-        color: aliceblue;
-    }
-    .accordion div.header span{
-        font-size: 16px;
-    }
-    .accordion div.header img{
-        transition: .3s;
-        width: 32px;
-    }
-    .rotate{
-        transition: .3s;
-        transform: rotate(180deg);
-    }
-    .accordion div.content p{
-        padding: 16px 24px;
-        margin: 0px;
-    }
-</style>
+<link rel="stylesheet" href="../padrao-esplee/padrao-esplee.css">
 <body>
     <br>
     <br>
@@ -52,30 +17,17 @@
                 <div class="header">
                     <button>
                         <span>Accordion #1</span>
-                        <img src="imagens/icon/light-arrow-down.svg" alt="">
+                        <img src="../imagens/icon/light-arrow-down.svg" alt="">
                     </button>
                 </div>
-                <div class="content">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A similique commodi, ducimus velit, reprehenderit dicta quia ipsa, ratione illo ipsam aliquid voluptas voluptatum accusamus cumque qui corporis quis maiores esse.
-                    </p>
-                </div>
-        </div>
-        <div class="accordion">
-                <div class="header">
-                    <button>
-                        <span>Accordion #1</span>
-                        <img src="imagens/icon/light-arrow-down.svg" alt="">
-                    </button>
-                </div>
-                <div class="content">
+                <div class="content-ac">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. A similique commodi, ducimus velit, reprehenderit dicta quia ipsa, ratione illo ipsam aliquid voluptas voluptatum accusamus cumque qui corporis quis maiores esse.
                     </p>
                 </div>
         </div>
     </section>
-    <script src="jquery-3.6.0.js"></script>
+    <script src="../padrao-esplee/jquery-3.6.0.js"></script>
     <script>
         $(document).ready(function(){
 
