--- a/testes/accordion.html
+++ b/testes/accordion.html
@@ -5,26 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste</title>
+    <style>
+        body{
+            padding: 48px;
+        }
+        section{
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+    </style>
 </head>
 <link rel="stylesheet" href="../padrao-esplee/padrao-esplee.css">
 <body>
-    <br>
-    <br>
-    <br>
-    <br>
     <section>
         <div class="accordion">
-                <div class="header">
-                    <button>
-                        <span>Accordion #1</span>
-                        <img src="../imagens/icon/light-arrow-down.svg" alt="">
-                    </button>
-                </div>
-                <div class="content-ac">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A similique commodi, ducimus velit, reprehenderit dicta quia ipsa, ratione illo ipsam aliquid voluptas voluptatum accusamus cumque qui corporis quis maiores esse.
-                    </p>
-                </div>
+            <div class="header">
+                <button>
+                    <span>Accordion #1</span>
+                    <img src="../imagens/icon/light-arrow-down.svg" alt="">
+                </button>
+            </div>
+            <div class="content-ac">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A similique commodi, ducimus velit, reprehenderit dicta quia ipsa, ratione illo ipsam aliquid voluptas voluptatum accusamus cumque qui corporis quis maiores esse.
+                </p>
+            </div>
+        </div>
+        <div class="accordion">
+            <div class="header">
+                <button>
+                    <span>Accordion #1</span>
+                    <img src="../imagens/icon/light-arrow-down.svg" alt="">
+                </button>
+            </div>
+            <div class="content-ac">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A similique commodi, ducimus velit, reprehenderit dicta quia ipsa, ratione illo ipsam aliquid voluptas voluptatum accusamus cumque qui corporis quis maiores esse.
+                </p>
+            </div>
         </div>
     </section>
     <script src="../padrao-esplee/jquery-3.6.0.js"></script>
