--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -55,7 +55,9 @@
         </div>
     </section>
     <section>
-        <img src="imagens/mockup1-p.jpg" alt="mockup1">
+        <div class="galery">
+            <img src="imagens/mockup1-p.jpg" alt="mockup1">
+        </div>
     </section>
 </body>
 </html>
