--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -56,8 +56,32 @@
     </section>
     <section>
         <div class="galery">
-            <img src="imagens/mockup1-p.jpg" alt="mockup1">
+            <img src="imagens/p/mockup1-p.jpg" alt="mockup1-p">
+            <div class="social">
+                <img src="imagens/pecas-social/0.5x/social-ativo 2@0.5x-100.jpg" alt="social2">
+                <img src="imagens/pecas-social/0.5x/social-ativo 3@0.5x-100.jpg" alt="social3">
+                <img src="imagens/pecas-social/0.5x/social-ativo 4@0.5x-100.jpg" alt="social4">
+                <img src="imagens/pecas-social/0.5x/social-ativo 5@0.5x-100.jpg" alt="social5">
+            </div>
+            <img src="imagens/p/mockup2-p.jpg" alt="mockup2-p">
+            <div class="social" id="n2">
+                <img src="imagens/pecas-social/0.5x/social-ativo 1@0.5x-100.jpg" alt="social1">
+            </div>
+            <img src="imagens/p/mockup3-p.jpg" alt="mockup3-p">
+            <div class="social">
+                <img src="imagens/p/mockup5.3-p.jpg" alt="mockup5.3-p">
+                <img src="imagens/p/mockup5.2-p.jpg" alt="mockup5.2-p">
+                <img src="imagens/p/mockup5.1-p.jpg" alt="mockup5.1-p">
+                <img src="imagens/p/mockup5.4-p.jpg" alt="mockup5.4-p">
+            </div>
+            <img src="imagens/p/mockup4-p.jpg" alt="mockup4-p">
+            <img src="imagens/p/mockup6-p.png" alt="">
         </div>
+    </section>
+    <section>
+        <a href="#" rel="back">
+            <button class="outline-dark">+Cases</button>
+        </a>
     </section>
 </body>
 </html>
