--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tango</title>
     <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
-    <!--Padrão Mobile-->
+    
     <link rel="stylesheet" href="../tango/css/style.css" media="all">
+
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 640px)">
 </head>
 <body>
     <header>
@@ -79,9 +81,12 @@
         </div>
     </section>
     <section>
-        <a href="#" rel="back">
-            <button class="outline-dark">+Cases</button>
-        </a>
+        <div class="content">
+            <a href="#" rel="back">
+                <button class="outline-dark">+Cases</button>
+            </a>
+        </div>
     </section>
+    <footer></footer>
 </body>
 </html>
