--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tango</title>
     <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
-    
+
+    <!--Padrão Mobile-->
     <link rel="stylesheet" href="../tango/css/style.css" media="all">
 
-    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 640px)">
+    <!--Versão Tablet-->
+    <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 640px)">
+
+    <!--Versão Desktop-->
+    <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1280px)">
+
 </head>
 <body>
     <header>
@@ -38,22 +44,26 @@
                 <a href="#">Tango</a>
             </nav>
 
-            <div class="headings">
-                <h1>Tango</h1>
-                <h2>No nosso ritmo aonde for!</h2>
+            <div id="flex">
+                <div id="div1">
+                    <div class="headings">
+                        <h1>Tango</h1>
+                        <h2>No nosso ritmo aonde for!</h2>
+                    </div>
+                    <div class="tags">
+                        <div class="tag">Id. Visual</div>
+                        <div class="tag">Est. de Marca</div>
+                    </div>
+                </div>
+                <article id="div2">
+                    <p>
+                        A Tango é um e-commerce fundada em 2003 que vende peças de roupas diversas para um público de maioria feminino entre 24 à 45 anos de classe média. Tango busca sempre ter um estilo moderno nas atividades no dia-a-dia por um preço acessível. Atualmente ela está buscando ganhar uma margem no mercado de calçados.
+                    </p>
+                    <p>
+                        O objetivo do projeto foi principalmente aumentar a participação de mercado através de um novo público, criando então uma nova identidade visual para a marca focada em atrair um público jovem, mantendo os valores e o público da empresa.
+                    </p>
+                </article>
             </div>
-            <div class="tags">
-                <div class="tag">Id. Visual</div>
-                <div class="tag">Est. de Marca</div>
-            </div>
-            <article>
-                <p>
-                    A Tango é um e-commerce fundada em 2003 que vende peças de roupas diversas para um público de maioria feminino entre 24 à 45 anos de classe média. Tango busca sempre ter um estilo moderno nas atividades no dia-a-dia por um preço acessível. Atualmente ela está buscando ganhar uma margem no mercado de calçados.
-                </p>
-                <p>
-                    O objetivo do projeto foi principalmente aumentar a participação de mercado através de um novo público, criando então uma nova identidade visual para a marca focada em atrair um público jovem, mantendo os valores e o público da empresa. 
-                </p>
-            </article> 
         </div>
     </section>
     <section>
