--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -26,8 +26,14 @@
                         <img src="imagens/light-arrow-left.svg" alt="voltar">
                     </a>
                 </div>
-                <div class="icon">
-                    <img src="imagens/light-menu.svg" alt="menu-bar">
+                <div id="nav-links">
+                    <a href="#">Na Rota</a>
+                    <a href="#">Projeto</a>
+                    <a href="#">Sobre Nós</a>
+                    <a href="../secundarias/contato/contato.html">Contato</a>
+                </div>
+                <div class="nav-ico" id="nav-menu-ico">
+                    <a href="#"><img src="imagens/light-menu.svg" alt="menu-ico"></a>
                 </div>
             </div>
         </div>
