--- a/pags/secundarias/projetos/descript/descript.html
+++ b/pags/secundarias/projetos/descript/descript.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
 
     <!--Padrão Mobile-->
-    <link rel="stylesheet" href="../tango/css/style.css" media="all">
+    <link rel="stylesheet" href="css/style.css" media="all">
 
     <!--Versão Tablet-->
     <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 640px)">
@@ -38,7 +38,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <main>
         <div class="triang top right"></div>
         <div class="triang top left"></div>
         <div class="content">
@@ -54,7 +54,7 @@
                 <div id="div1">
                     <div class="headings">
                         <h1>Descript</h1>
-                        <h2>No nosso ritmo aonde for!</h2>
+                        <h2>Descodificando problemas </h2>
                     </div>
                     <div class="tags">
                         <div class="tag">Id. Visual</div>
@@ -63,15 +63,15 @@
                 </div>
                 <article id="div2">
                     <p>
-                        A Tango é um e-commerce fundada em 2003 que vende peças de roupas diversas para um público de maioria feminino entre 24 à 45 anos de classe média. Tango busca sempre ter um estilo moderno nas atividades no dia-a-dia por um preço acessível. Atualmente ela está buscando ganhar uma margem no mercado de calçados.
+                        Descripti é um marketplace online completamente focado na compra, venda e transações de ativos digitais como Bitcoin e NFTs. Há muito preconceito com os Crípto Ativos atualmente devido ao seu pouco tempo de vida.  A Descripti nasceu para mostrar que investir neles pode ser algo tão normal quanto qualquer outro Ativo de Renda Variável.
                     </p>
                     <p>
-                        O objetivo do projeto foi principalmente aumentar a participação de mercado através de um novo público, criando então uma nova identidade visual para a marca focada em atrair um público jovem, mantendo os valores e o público da empresa.
+                        O objetivo do projeto foi estudar o mercado e criar uma identidade que conecte com um público de pessoas que já investem no mercado tradicional com uma idade entre 31 à 45.
                     </p>
                 </article>
             </div>
         </div>
-    </section>
+    </main>
     <section class="galery"></section>
     <section id="cta">
         <div class="content">
