--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <main>
         <div class="triang top right"></div>
         <div class="triang top left"></div>
         <div class="content">
@@ -71,7 +71,7 @@
                 </article>
             </div>
         </div>
-    </section>
+    </main>
     <section class="galery">
         <div class="galery">
             <picture>
