--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -81,5 +81,8 @@
         </div>
     </section>
     <footer></footer>
+    <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
+    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
+    <script src="js/script-descripti.js"></script>
 </body>
 </html>
